добавить быструю проверку